feat(adminai): add autonomous toggle, tab completion, and proactive maintenance
- Add autonomous subcommand and toggle functionality.
- Add tab completion for adminai commands.
- Introduce proactive maintenance scheduler based on configurable intervals.
- Add new config options for autonomous/proactive tuning.